Trabajo de optimizacion antes de implementar lo nuevo, se elimino la persistencia en una bd, era inconsistente y sobrecargaba en tiempo de ejecucion